[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/menus/ingame/ingame_main_menu.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/menus/global/my_menu_button.gd" type="Script" id=3]
[ext_resource path="res://ui/menus/shop/stats_container.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/menus/shop/weapons_container.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/menus/shop/items_container.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/menus/global/focus_manager.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/menus/shop/item_popup.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/menus/shop/stat_popup.tscn" type="PackedScene" id=9]
[ext_resource path="res://resources/fonts/actual/base/font_small_button.tres" type="DynamicFont" id=10]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Content" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Content"]
margin_right = 1920.0
margin_bottom = 1396.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="Content/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1895.0
margin_bottom = 1371.0
custom_constants/separation = 100
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Content/MarginContainer/HBoxContainer"]
margin_left = 184.0
margin_right = 784.0
margin_bottom = 1346.0
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="ResumeButton" type="Button" parent="Content/MarginContainer/HBoxContainer/Buttons"]
margin_top = 505.0
margin_right = 600.0
margin_bottom = 570.0
focus_neighbour_top = NodePath("../QuitButton")
text = "MENU_RESUME"
script = ExtResource( 3 )

[node name="RestartButton" type="Button" parent="Content/MarginContainer/HBoxContainer/Buttons"]
margin_top = 595.0
margin_right = 600.0
margin_bottom = 660.0
text = "MENU_RESTART"

[node name="OptionsButton" type="Button" parent="Content/MarginContainer/HBoxContainer/Buttons"]
margin_top = 685.0
margin_right = 600.0
margin_bottom = 750.0
text = "MENU_OPTIONS"
script = ExtResource( 3 )

[node name="QuitButton" type="Button" parent="Content/MarginContainer/HBoxContainer/Buttons"]
margin_top = 775.0
margin_right = 600.0
margin_bottom = 840.0
focus_neighbour_bottom = NodePath("../ResumeButton")
text = "MENU_RETURN_MAIN"
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Content/MarginContainer/HBoxContainer"]
margin_left = 884.0
margin_right = 1202.0
margin_bottom = 1346.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyLabel" type="Label" parent="Content/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 318.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 10 )
text = "DIFFICULTY"

[node name="WeaponsContainer" parent="Content/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 81.0
margin_right = 318.0
margin_bottom = 254.0
nb_columns = 6

[node name="Label" parent="Content/MarginContainer/HBoxContainer/VBoxContainer/WeaponsContainer" index="0"]
margin_bottom = 45.0

[node name="ScrollContainer" parent="Content/MarginContainer/HBoxContainer/VBoxContainer/WeaponsContainer" index="1"]
margin_top = 70.0
margin_bottom = 173.0
rect_min_size = Vector2( 0, 103 )

[node name="ItemsContainer" parent="Content/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 304.0
margin_right = 318.0
margin_bottom = 683.0
nb_columns = 6

[node name="Label" parent="Content/MarginContainer/HBoxContainer/VBoxContainer/ItemsContainer" index="0"]
margin_right = 318.0
margin_bottom = 45.0

[node name="ScrollContainer" parent="Content/MarginContainer/HBoxContainer/VBoxContainer/ItemsContainer" index="1"]
margin_top = 70.0
margin_right = 318.0
margin_bottom = 379.0
rect_min_size = Vector2( 0, 309 )

[node name="StatsContainer" parent="Content/MarginContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 1302.0
margin_top = 0.0
margin_right = 1686.0
margin_bottom = 1346.0

[node name="FocusManager" parent="." instance=ExtResource( 7 )]

[node name="ItemPopup" parent="." instance=ExtResource( 8 )]
visible = false
margin_top = 970.0
margin_bottom = 970.0

[node name="StatPopup" parent="." instance=ExtResource( 9 )]
visible = false
margin_top = 1008.0
margin_bottom = 1008.0

[connection signal="pressed" from="Content/MarginContainer/HBoxContainer/Buttons/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Content/MarginContainer/HBoxContainer/Buttons/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Content/MarginContainer/HBoxContainer/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Content/MarginContainer/HBoxContainer/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]

[editable path="Content/MarginContainer/HBoxContainer/VBoxContainer/WeaponsContainer"]
[editable path="Content/MarginContainer/HBoxContainer/VBoxContainer/ItemsContainer"]
